Update String template blog post.